--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#favourite">FAVOURITE</a></li>
         <li><a href="#lifestyle">LIFESTYLE</a></li>
         <li>
-          <button class="btn">SIGN UP</button>
+          <a href="auth.html" class="btn" style="color: white;">SIGN UP</a>
         </li>
       </ul>
     </nav>
