add proper href struture for index html

--- a/index.html
+++ b/index.html
@@ -215,26 +215,26 @@
         <div class="footer__col">
           <h4>Company</h4>
           <ul class="footer__links">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="pages/About.html">About</a></li>
+            <li><a href="pages/contact.html">Contact Us</a></li>
+            <li><a href="pages/support.html">Support</a></li>
+            <li><a href="pages/carrer.html">Careers</a></li>
           </ul>
         </div>
         <div class="footer__col">
           <h4>Quick Links</h4>
           <ul class="footer__links">
-            <li><a href="#">Store Location</a></li>
-            <li><a href="#">Order Tracking</a></li>
-            <li><a href="#">Size Guide</a></li>
-            <li><a href="#">FAQs</a></li>
+            <li><a href="pages/Store_location.html">Store Location</a></li>
+            <li><a href="pages/order_tracking.html">Order Tracking</a></li>
+            <li><a href="pages/size_guide.html">Size Guide</a></li>
+            <li><a href="pages/FAQ.html">FAQs</a></li>
           </ul>
         </div>
         <div class="footer__col">
           <h4>Legal</h4>
           <ul class="footer__links">
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="pages/Terms&conditons.html">Terms & Conditions</a></li>
+            <li><a href="pages/privacy&policy.html">Privacy Policy</a></li>
           </ul>
         </div>
       </div>
