Add functional Login and Sign Up pages

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <li><a href="#fashion">FASHION</a></li>
         <li><a href="#favourite">FAVOURITE</a></li>
         <li><a href="#lifestyle">LIFESTYLE</a></li>
-        <li>
-          <button class="btn">SIGN UP</button>
-        </li>
+       <li><a href="login.html" class="nav__btn">LOGIN</a></li>
+       <li><a href="signup.html" class="nav__btn">SIGN UP</a></li>
+
       </ul>
     </nav>
     <header>
