Fix Hamburger issue

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,7 +36,7 @@
           <h1>
             <span>EXPERIENCE</span>
             <br />
-            THE 
+            THE
             <br />
             <span>ART OF</span>
             <br />
@@ -244,6 +244,6 @@
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="hello.js"></script>
   </body>
 </html>
