--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h4>18 NOV - 25 DEC 2024</h4>
           <p>Terms and conditions apply</p>
           <div class="sale__btn">
-            <button class="btn">Shop Now</button>
+            <a href="pages/shop.html" class="btn">Shop Now</a>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
           <div class="favourite__content">
             <div>
               <h4>Trending on Instagram</h4>
-              <a href="#">Explore Now</a>
+              <a href="pages/instagram_trending.html">Explore Now</a>
             </div>
             <span><i class="ri-arrow-right-line"></i></span>
           </div>
@@ -149,7 +149,7 @@
           <div class="favourite__content">
             <div>
               <h4>All under $40</h4>
-              <a href="#">Explore Now</a>
+              <a href="pages/under_40_dollar.html">Explore Now</a>
             </div>
             <span><i class="ri-arrow-right-line"></i></span>
           </div>
