--- a/pages/Terms&conditons.html
+++ b/pages/Terms&conditons.html
@@ -78,19 +78,19 @@
       </header>
 
       <!-- Table of Contents -->
-      <nav class="terms__toc" aria-label="Terms sections" style="margin: 2rem 0; padding: 1.5rem; background: #f8f9fa; border-radius: 8px;">
-        <h2 style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--text-dark);">Table of Contents</h2>
-        <ol style="display: grid; gap: 0.5rem; font-size: 0.95rem;">
-          <li><a href="#introduction" style="color: var(--text-light);">Introduction</a></li>
-          <li><a href="#website-use" style="color: var(--text-light);">Use of Website</a></li>
-          <li><a href="#account-responsibility" style="color: var(--text-light);">Account Responsibility</a></li>
-          <li><a href="#products-pricing" style="color: var(--text-light);">Products & Pricing</a></li>
-          <li><a href="#orders-payments" style="color: var(--text-light);">Orders & Payments</a></li>
-          <li><a href="#returns-refunds" style="color: var(--text-light);">Returns & Refunds</a></li>
-          <li><a href="#intellectual-property" style="color: var(--text-light);">Intellectual Property</a></li>
-          <li><a href="#liability-limitation" style="color: var(--text-light);">Limitation of Liability</a></li>
-          <li><a href="#terms-changes" style="color: var(--text-light);">Changes to Terms</a></li>
-          <li><a href="#contact-us" style="color: var(--text-light);">Contact Us</a></li>
+      <nav class="terms__toc" aria-label="Terms sections">
+        <h2>Table of Contents</h2>
+        <ol>
+          <li><a href="#introduction" data-number="01">Introduction</a></li>
+          <li><a href="#website-use" data-number="02">Use of Website</a></li>
+          <li><a href="#account-responsibility" data-number="03">Account Responsibility</a></li>
+          <li><a href="#products-pricing" data-number="04">Products & Pricing</a></li>
+          <li><a href="#orders-payments" data-number="05">Orders & Payments</a></li>
+          <li><a href="#returns-refunds" data-number="06">Returns & Refunds</a></li>
+          <li><a href="#intellectual-property" data-number="07">Intellectual Property</a></li>
+          <li><a href="#liability-limitation" data-number="08">Limitation of Liability</a></li>
+          <li><a href="#terms-changes" data-number="09">Changes to Terms</a></li>
+          <li><a href="#contact-us" data-number="10">Contact Us</a></li>
         </ol>
       </nav>
 
