add-new-pages-push-auth-to-pages-dir

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#favourite">FAVOURITE</a></li>
         <li><a href="#lifestyle">LIFESTYLE</a></li>
         <li>
-          <a href="auth.html" class="btn" style="color: white;">SIGN UP</a>
+          <a href="pages/auth.html" class="btn" style="color: white;">SIGN UP</a>
         </li>
       </ul>
     </nav>
@@ -76,9 +76,9 @@
           <div class="arrival__content">
             <div>
               <h4>Hoodies & Sweatshirts</h4>
-              <a href="#">Explore Now</a>
+              <a href="pages/Hoodies&Sweatshirts.html">Explore Now</a>
             </div>
-            <span><i class="ri-arrow-right-line"></i></span>
+            <!-- <span><i class="ri-arrow-right-line"></i></span> -->
           </div>
         </div>
         <div class="arrival__card">
@@ -88,9 +88,9 @@
           <div class="arrival__content">
             <div>
               <h4>Coats & Parkas</h4>
-              <a href="#">Explore Now</a>
+              <a href="pages/Coats&Parkas.html">Explore Now</a>
             </div>
-            <span><i class="ri-arrow-right-line"></i></span>
+            <!-- <span><i class="ri-arrow-right-line"></i></span> -->
           </div>
         </div>
         <div class="arrival__card">
@@ -100,9 +100,9 @@
           <div class="arrival__content">
             <div>
               <h4>Oversized T-Shirt</h4>
-              <a href="#">Explore Now</a>
+              <a href="pages/Oversized-T-shirt.html">Explore Now</a>
             </div>
-            <span><i class="ri-arrow-right-line"></i></span>
+            <!-- <span><i class="ri-arrow-right-line"></i></span> -->
           </div>
         </div>
       </div>
