--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
         <img src="assets/banner-6.png" alt="banner" />
         <img src="assets/banner-7.png" alt="banner" />
         <img src="assets/banner-8.png" alt="banner" />
+        <img src="assets/banner-1.png" alt="banner" />
+        <img src="assets/banner-2.png" alt="banner" />
+        <img src="assets/banner-3.png" alt="banner" />
+        <img src="assets/banner-4.png" alt="banner" />
+        <img src="assets/banner-5.png" alt="banner" />
+        <img src="assets/banner-6.png" alt="banner" />
+        <img src="assets/banner-7.png" alt="banner" />
+        <img src="assets/banner-8.png" alt="banner" />
+        
       </div>
     </section>
 
