--- a/index.html
+++ b/index.html
@@ -7,6 +7,191 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <title>CITY STYLE</title>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+    :root {
+      --primary-color: #e5d241;
+      --text-dark: #000000;
+      --text-light: #737373;
+      --extra-light: #379898;
+      --white: #ffffff;
+      --max-width: 1200px;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+    }
+
+    nav {
+      position: fixed;
+      top: 1.5rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      max-width: 1000px;
+      padding: 0.8rem 1.5rem;
+      background: rgba(18, 18, 28, 0.9);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 1000;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .nav__header {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .nav__logo a {
+      font-size: 1.5rem;
+      font-weight: 800;
+      color: var(--white);
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .nav__links {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+    }
+
+    .nav__links li a {
+      color: #cccccc;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: 0.3s;
+    }
+
+    .nav__links li a:hover {
+      color: var(--white);
+    }
+
+    .nav__actions {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+    }
+
+    .nav__signin {
+      color: #cccccc;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: 0.3s;
+      text-decoration: none;
+    }
+
+    .nav__signin:hover {
+      color: var(--white);
+    }
+
+    .nav__btn {
+      padding: 0.6rem 1.5rem;
+      background: linear-gradient(90deg, #8A2BE2, #4169E1);
+      color: var(--white);
+      border-radius: 2rem;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: 0.3s;
+      text-decoration: none;
+      box-shadow: 0 4px 15px rgba(65, 105, 225, 0.3);
+      border: none;
+      cursor: pointer;
+    }
+
+    .nav__btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(65, 105, 225, 0.5);
+    }
+
+    .nav__menu__btn {
+      display: none;
+      font-size: 1.5rem;
+      color: var(--white);
+      cursor: pointer;
+    }
+
+    /* Mobile Responsive */
+    @media (max-width: 768px) {
+      nav {
+        top: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+        max-width: 100%;
+        border-radius: 0;
+        padding: 1rem;
+        justify-content: space-between;
+      }
+
+      .nav__header {
+        flex: 1;
+        justify-content: space-between;
+      }
+
+      .nav__actions {
+        display: none;
+      }
+
+      .nav__links {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgba(18, 18, 28, 0.98);
+        flex-direction: column;
+        padding: 2rem;
+        gap: 1.5rem;
+        transform: translateY(-200%);
+        transition: 0.4s ease;
+        z-index: -1;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      }
+
+      .nav__links.open {
+        transform: translateY(0);
+      }
+
+      .nav__links li {
+        text-align: center;
+      }
+
+      .nav__menu__btn {
+        display: block;
+      }
+    }
+
+    /* User Profile Styles */
+    .nav__user {
+      display: none;
+      /* Hidden by default */
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      background: var(--primary-color);
+      color: var(--text-dark);
+      font-weight: 700;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 1.2rem;
+      border: 2px solid var(--white);
+      transition: 0.3s;
+    }
+
+    .nav__user:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 10px var(--primary-color);
+    }
+  </style>
 </head>
 
 <body>
@@ -20,14 +205,16 @@
       </div>
     </div>
     <ul class="nav__links" id="nav-links">
-      <li><a href="#catalogue">CATALOGUE</a></li>
-      <li><a href="#fashion">FASHION</a></li>
-      <li><a href="#favourite">FAVOURITE</a></li>
-      <li><a href="#lifestyle">LIFESTYLE</a></li>
-      <li>
-        <a href="auth.html" class="btn" style="color: white;">SIGN UP</a>
-      </li>
+      <li><a href="#catalogue">Catalogue</a></li>
+      <li><a href="#fashion">Fashion</a></li>
+      <li><a href="#favourite">Favourite</a></li>
+      <li><a href="#lifestyle">Lifestyle</a></li>
     </ul>
+    <div class="nav__actions" id="nav-actions-container">
+      <a href="/pages/auth.html" class="nav__signin" id="signin-link">Sign In</a>
+      <div class="nav__user" id="user-avatar" title="Click to Logout"></div>
+      <button class="nav__btn">Get Started</button>
+    </div>
   </nav>
   <header>
     <div class="section__container header__container">
@@ -243,7 +430,50 @@
   </footer>
 
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="hello.js"></script>
+  <!-- Replacing hello.js with inline script for menu toggle -->
+  <script>
+    const menuBtn = document.getElementById("menu-btn");
+    const navLinks = document.getElementById("nav-links");
+    const menuBtnIcon = menuBtn.querySelector("i");
+
+    menuBtn.addEventListener("click", (e) => {
+      navLinks.classList.toggle("open");
+
+      const isOpen = navLinks.classList.contains("open");
+      menuBtnIcon.setAttribute("class", isOpen ? "ri-close-line" : "ri-menu-line");
+    });
+
+    navLinks.addEventListener("click", (e) => {
+      navLinks.classList.remove("open");
+      menuBtnIcon.setAttribute("class", "ri-menu-line");
+    });
+
+    /* --- Auth State Logic --- */
+    const currentUser = localStorage.getItem("currentUser");
+    const signinLink = document.getElementById("signin-link");
+    const userAvatar = document.getElementById("user-avatar");
+    const getStartedBtn = document.querySelector(".nav__btn");
+
+    if (currentUser) {
+      // User is logged in
+      signinLink.style.display = "none";
+      if (getStartedBtn) getStartedBtn.style.display = "none";
+      userAvatar.style.display = "flex";
+
+      // Set Initial
+      const initial = currentUser.charAt(0).toUpperCase();
+      userAvatar.textContent = initial;
+
+      // Logout on click
+      userAvatar.addEventListener("click", () => {
+        const confirmLogout = confirm(`Logout from ${currentUser}?`);
+        if (confirmLogout) {
+          localStorage.removeItem("currentUser");
+          window.location.reload();
+        }
+      });
+    }
+  </script>
 </body>
 
 </html>
