--- a/legacy_source/pages/shop.html
+++ b/legacy_source/pages/shop.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Page</title>
+    <title>Shop Page - CITY STYLE</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        a:hover {
+            color: #e5d241;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>shop page</h1>
+    <nav style="text-align: left; margin-bottom: 2rem;">
+        <a href="../index.html"><i class="ri-arrow-left-line"></i> Back to Home</a>
+    </nav>
+    <h1>Shop Page</h1>
+    <p>Coming Soon...</p>
 </body>
+
 </html>
