--- a/legacy_source/index.html
+++ b/legacy_source/index.html
@@ -46,6 +46,7 @@
         <div class="search__bar">
           <input type="text" id="product-search" placeholder="Search for products..." />
           <button id="search-btn"><i class="ri-search-line"></i></button>
+          <div class="search__results" id="search-results"></div>
         </div>
         <div class="header__btns">
           <button class="btn">Shop Now</button>
