change-dir-name-to-old-assets

--- a/legacy_source/index.html
+++ b/legacy_source/index.html
@@ -53,21 +53,21 @@
         </div>
       </div>
       <div class="header__image">
-        <img src="assets/header (1).png" alt="header" />
+        <img src="old_assets/header (1).png" alt="header" />
       </div>
     </div>
   </header>
 
   <section class="banner">
     <div class="banner__container">
-      <img src="assets/banner-1.png" alt="banner" />
-      <img src="assets/banner-2.png" alt="banner" />
-      <img src="assets/banner-3.png" alt="banner" />
-      <img src="assets/banner-4.png" alt="banner" />
-      <img src="assets/banner-5.png" alt="banner" />
-      <img src="assets/banner-6.png" alt="banner" />
-      <img src="assets/banner-7.png" alt="banner" />
-      <img src="assets/banner-8.png" alt="banner" />
+      <img src="old_assets/banner-1.png" alt="banner" />
+      <img src="old_assets/banner-2.png" alt="banner" />
+      <img src="old_assets/banner-3.png" alt="banner" />
+      <img src="old_assets/banner-4.png" alt="banner" />
+      <img src="old_assets/banner-5.png" alt="banner" />
+      <img src="old_assets/banner-6.png" alt="banner" />
+      <img src="old_assets/banner-7.png" alt="banner" />
+      <img src="old_assets/banner-8.png" alt="banner" />
     </div>
   </section>
 
@@ -76,7 +76,7 @@
     <div class="arrival__grid">
       <div class="arrival__card">
         <div class="arrival__image">
-          <img src="assets/hoodie.jpg" alt="arrival" />
+          <img src="old_assets/hoodie.jpg" alt="arrival" />
         </div>
         <div class="arrival__content">
           <div>
@@ -88,7 +88,7 @@
       </div>
       <div class="arrival__card">
         <div class="arrival__image">
-          <img src="assets/arrival-2.jpg" alt="arrival" />
+          <img src="old_assets/arrival-2.jpg" alt="arrival" />
         </div>
         <div class="arrival__content">
           <div>
@@ -100,7 +100,7 @@
       </div>
       <div class="arrival__card">
         <div class="arrival__image">
-          <img src="assets/OVRSIZED.webp" alt="arrival" />
+          <img src="old_assets/OVRSIZED.webp" alt="arrival" />
         </div>
         <div class="arrival__content">
           <div>
@@ -119,7 +119,7 @@
   <section class="sale" id="fashion">
     <div class="section__container sale__container">
       <div class="sale__image">
-        <img src="assets/sale.png" alt="sale" />
+        <img src="old_assets/sale.png" alt="sale" />
       </div>
       <div class="sale__content">
         <h2><span>PAYDAY</span><br />SALE NOW</h2>
@@ -140,7 +140,7 @@
     <div class="favourite__grid">
       <div class="favourite__card">
         <div class="favourite__image">
-          <img src="assets/Selena Gomez.webp" alt="favourite" />
+          <img src="old_assets/Selena Gomez.webp" alt="favourite" />
         </div>
         <div class="favourite__content">
           <div>
@@ -152,7 +152,7 @@
       </div>
       <div class="favourite__card">
         <div class="favourite__image">
-          <img src="assets/favourite-2.jpg" alt="favourite" />
+          <img src="old_assets/favourite-2.jpg" alt="favourite" />
         </div>
         <div class="favourite__content">
           <div>
@@ -170,7 +170,7 @@
 
   <section class="section__container download__container" id="lifestyle">
     <div class="download__image">
-      <img src="assets/download.png" alt="download" />
+      <img src="old_assets/download.png" alt="download" />
     </div>
     <div class="download__content">
       <h2 class="section__header">DOWNLOAD APP & GET THE VOUCHER!</h2>
@@ -179,10 +179,10 @@
       </p>
       <div class="download__links">
         <a href="#">
-          <img src="assets/google.png" alt="google" />
+          <img src="old_assets/google.png" alt="google" />
         </a>
         <a href="#">
-          <img src="assets/apple.png" alt="apple" />
+          <img src="old_assets/apple.png" alt="apple" />
         </a>
       </div>
     </div>
