--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- External Scripts -->
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
   <body>
     <div id="root"></div>
